--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <!--Height of each list item-->
-    <dimen name = "list_item_height">50dp</dimen>
+    <dimen name = "list_item_min_height">50dp</dimen>
+    <dimen name = "list_item_max_height">80dp</dimen>
 </resources>
